--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@astrojs/vercel": "^3.4.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "astro": "^2.5.1",
+    "marked": "^5.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@types/marked": "^5.0.0",
     "@types/node": "^20.2.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6"
