--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/vercel": "^3.4.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "astro": "^2.5.1",
+    "classnames": "^2.3.2",
     "marked": "^5.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
