--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/marked": "^5.0.0",
     "@types/node": "^20.2.1",
     "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "@vite-pwa/astro": "^0.1.1"
   }
 }
