--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "vite-plugin-pwa": "^0.16.4"
   },
   "devDependencies": {
     "@types/marked": "^5.0.0",
     "@types/node": "^20.2.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@vite-pwa/astro": "^0.1.1"
+    "@vite-pwa/astro": "^0.1.1",
+    "workbox-window": "^7.0.0"
   }
 }
